subindo backend e criando bucket para backend do terraform 33

--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -23,6 +23,7 @@ pipeline {
         stage('Importar Bucket (se necessário)') {
             steps {
                 withCredentials([
+                    string(credentialsId: 'ssh-public-key', variable: 'SSH_PUB_KEY'),
                     file(credentialsId: 'terraform-key', variable: 'GOOGLE_CREDENTIALS')
                 ]) {
                     dir('terraform') {
