--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -97,7 +97,7 @@ pipeline {
                         ).trim()
 
                         writeFile file: "../ansible/inventory", text: """[vm]
-vm ansible_host=${instance_ip} ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_rsa
+vm_$AMBIENTE ansible_host=${instance_ip} ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_rsa
 """
                     }
                 }
